<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


        <EditText
            android:id="@+id/ipAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/port"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:hint="@string/etIP"
            android:inputType="text"
            android:textAlignment="center"
            tools:ignore="Autofill" />

        <EditText
            android:layout_centerVertical="true"
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/etPort"
            android:textAlignment="center"
            android:inputType="number"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/port"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:text="@string/save" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/save"
            android:layout_centerHorizontal="true"
            android:text="@string/condSwitch" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/switch3"
            android:layout_centerHorizontal="true"
            android:text="@string/condService" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/service"
            android:layout_toStartOf="@id/mid"
            android:text="@string/state" />


        <TextView
            android:id="@+id/mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/service"
            android:layout_centerHorizontal="true"
            android:text="@string/titikDua"/>

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/service"
            android:layout_toEndOf="@id/mid" />

</RelativeLayout>