<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoggingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleLogging"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="50dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sleepWhileCharging"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_above="@+id/layoutSleepCharging"/>

    <LinearLayout
        android:id="@+id/layoutSleepCharging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/midTvSleepOther"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/minutesSleepCharging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/Minutes"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/secondSleepCharging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/Second"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="Autofill" />


    </LinearLayout>

    <TextView
        android:id="@+id/midTvSleepOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/sleepOther"
        android:textAlignment="center"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/layoutSleepOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/midTvSleepOther"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/minutesSleepOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/Minutes"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/secondSleepOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/Second"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="Autofill" />


    </LinearLayout>

    <TextView
        android:id="@+id/titleSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleSliderTurnOff"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_below="@id/layoutSleepOther"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleSlider"
        android:layout_centerHorizontal="true"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="100.0" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/LowerModeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/slider"
        android:layout_centerHorizontal="true"
        android:text="@string/sliderTurnOff" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/UpperModeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LowerModeBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/sliderTurnOn" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UpperModeBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:text="@string/save" />




</RelativeLayout>