<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoggingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/titleWifiConfiguration"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/wifiNamePlaceHolder"
        android:inputType="text"
        android:textAlignment="center"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/timeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/TimeoutConfigurationPlaceholder"
        android:inputType="number"
        android:textAlignment="center"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:text="@string/save" />




</RelativeLayout>