<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_about">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleAbout"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <LinearLayout

        android:id="@+id/app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/silver"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textAlignment="center"
            android:padding="10dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:textColor="@color/black"
                android:text="@string/nameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_app_name"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:textColor="@color/black"
                android:text="@string/codeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_app_code"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@id/line2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/github_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_margin="20dp"


            android:background="@android:color/transparent"
            android:src="@drawable/ic_github"
            app:tint="@color/teal_200"/>

        <ImageButton
            android:id="@+id/linkedin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"


            android:background="@android:color/transparent"
            android:src="@drawable/ic_linkedin_icon_circle" />

        <ImageButton
            android:id="@+id/gitlab_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"


            android:background="@android:color/transparent"
            android:src="@drawable/ic_gitlab" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        >

        <ImageButton
            android:id="@+id/instagram_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_margin="20dp"


            android:background="@android:color/transparent"
            android:src="@drawable/ic_instagram" />


        <ImageButton
            android:id="@+id/facebook_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"


            android:background="@android:color/transparent"
            android:src="@drawable/ic_facebook_f_logo__2019_" />

    </LinearLayout>



</RelativeLayout>